# deep-root-gen

./: .buildinfo  .coveragerc  .dockerignore  .env  .flake8  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bentoml_configuration.yaml  docker-compose.model-deploy.yaml  docker-compose.yaml  genindex.html  index.html  mypy.ini  objects.inv  prefect.yaml  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/: dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: question.yml  refactor.yml
.github/workflows/: docker-build.yaml  docs.yaml  tests.yaml
_modules/: index.html
_modules/deeprootgen/calibration/: model_versioning.html  parameters.html  summary_statistics.html  surrogates.html
_modules/deeprootgen/data_model/: config_data_models.html  simulation_data_models.html
_modules/deeprootgen/form/: components.html
_modules/deeprootgen/io/: simulation_data.html
_modules/deeprootgen/model/: hgraph.html  root.html  soil.html
_modules/deeprootgen/pipeline/: experiment.html  workflow.html
_modules/deeprootgen/spatial/: transform.html
_modules/deeprootgen/statistics/: distance_metrics.html  (+1 more)
_sources/: index.rst.txt
_sources/api_reference/: calibration.rst.txt  form.rst.txt  index.rst.txt  io.rst.txt  model.rst.txt  pipeline.rst.txt  spatial.rst.txt  statistics.rst.txt
_sources/introduction/: index.rst.txt
api_reference/: calibration.html  data_model.html  form.html  index.html  io.html  model.html  pipeline.html  spatial.html  statistics.html
app/: app.py
app/conf/: config.yaml
app/deployments/: abc_service.py  optimisation_service.py  sensitivity_analysis_service.py  snpe_service.py  surrogate_service.py
app/flows/: bye_flow.py  hello_flow.py  prefect.yaml  prefect_remote_dispatch.py  run_abc.py  run_optimisation.py  run_sensitivity_analysis.py  run_simulation.py  run_snpe.py  run_surrogate.py
app/pages/: abc_root_system.py  deployments_root_system.py  eda_root_system.py  generate_root_system.py  home.py  optimisation_root_system.py  page1.py  sensitivity_analysis_root_system.py  simulate_root_system.py  snpe_root_system.py  surrogate_root_system.py
apptainer/python/: Apptainer.0.1.0
changelogs/: changelog.html
deeprootgen/calibration/: __init__.py  model_versioning.py  parameters.py  summary_statistics.py  surrogates.py
deeprootgen/data_model/: __init__.py  config_data_models.py  simulation_data_models.py
deeprootgen/form/: __init__.py  components.py
deeprootgen/io/: __init__.py  simulation_data.py
deeprootgen/model/: __init__.py  hgraph.py  root.py  soil.py
deeprootgen/pipeline/: __init__.py  experiment.py  workflow.py
deeprootgen/spatial/: __init__.py  transform.py
deeprootgen/statistics/: __init__.py  distance_metrics.py  summary_statistics.py
dockerfiles/postgres/: Dockerfile.0.1.0
dockerfiles/python/: Dockerfile.0.1.0
docs/source/: conf.py
introduction/: index.html
scripts/dev/: autoflake.sh  format.sh  install.sh  mypy.sh
scripts/docker/: build.sh  push.sh
scripts/docs/: create.sh
scripts/model/: deploy.sh  down.sh
sql/: init.sql
tests/: test_scaffold.py
(+14 files in other folders)
